--- a/Recetario/templates/Recetario/base.html
+++ b/Recetario/templates/Recetario/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.108.0">
-    <title>Album example · Bootstrap v5.3</title>
+    <title>Recetario Colaborativo - Proyecto Final</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
 
@@ -89,15 +89,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <h4 class="text-white">Acerca de esta página y su autora</h4>
+          <p class="text-white">¡Hola! Mi nombre es Flor, soy estudiante de la Lic. en Ciencias Físicas en la UBA y desarrollé esta página en el contexto del Curso de Python de Coderhouse. ¡Espero que la disfrutes!</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
+          <h4 class="text-white">Contacto</h4>
           <ul class="list-unstyled">
-            <li><a href="https://getbootstrap.com/docs/5.3/examples/album/#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="https://getbootstrap.com/docs/5.3/examples/album/#" class="text-white">Like on Facebook</a></li>
-            <li><a href="https://getbootstrap.com/docs/5.3/examples/album/#" class="text-white">Email me</a></li>
+            <li><a href="mailto:florenciacutraro@gmail.com" class="text-white">Mandame un mail</a></li>
           </ul>
         </div>
       </div>
@@ -109,10 +107,29 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
         <strong>Todas las Recetas</strong>
       </a>
+      <a  href="{% url 'mensaje-create' %}" class="navbar-brand d-flex align-items-center">
+        <strong>Enviar Mensaje</strong>
+      </a>
+
       {%if  user.is_authenticated %}
         <a href="{% url 'receta-create' %}" class="navbar-brand d-flex align-items-center">
           <strong>Subir nueva receta</strong>
         </a>
+        <a href="{% url 'receta-mine' %}" class="navbar-brand d-flex align-items-center">
+          <strong>Mis Recetas</strong>
+        </a>
+
+        {% if user.profile %}
+          <a  href="{% url 'profile-update' user.profile.id %}" class="navbar-brand d-flex align-items-center">
+            <strong>Editar Perfil</strong>
+          </a>
+            
+      
+        {% else %}
+        <a  href="{% url 'profile-create' %}" class="navbar-brand d-flex align-items-center">
+          <strong>Crear Perfil</strong>
+        </a>
+        {% endif %}
 
         <a href="{% url 'logout' %}" class="navbar-brand d-flex align-items-center">
           <strong>Salir</strong>
@@ -132,7 +149,9 @@
   </div>
 </header>
 
-{% block main %}{% endblock %}
+{% block main %}
+
+{% endblock %}
 
 
 
