--- a/Recetario/templates/Recetario/receta_form.html
+++ b/Recetario/templates/Recetario/receta_form.html
@@ -2,12 +2,11 @@
 
 {% load static %}
 
-{% block principal %}
-<div style="margin-top:40px">
+{% block main %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value="Actualizar">
+        <input type="submit" value="Guardar Receta">
     </form>
 </div>
 {% endblock %}
