--- a/Recetario/templates/registration/logout.html
+++ b/Recetario/templates/registration/logout.html
@@ -2,5 +2,5 @@
 {% load static %}
 
 {% block main %}
-<h1>Saliste del sistema</h1>
+<h1>¡Te esperamos pronto para compartir juntos más recetas!</h1>
 {% endblock %}
