--- a/Recetario/templates/Recetario/index.html
+++ b/Recetario/templates/Recetario/index.html
@@ -9,7 +9,7 @@
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light">Recetario colaborativo</h1>
-          <p class="lead text-muted">Animate a mostrarle al mundo tus mejores recetas y encontrá inspiración para crear nuevas. </p>
+          <p class="lead text-muted">Animate a mostrarle al mundo tus mejores recetas <br>y encontrá inspiración para crear nuevas </p>
           <p>
             <form action="{% url 'receta-search' %}" class="d-flex">
               <input class="form-control me-2" name="criterio" type="search" placeholder="¿Qué tenés ganas de cocinar hoy?" aria-label="Search">
